Vieport theme differs in outliner window modes #63451

Closed
opened 2019-04-10 08:45:25 +02:00 by Christoph Werner · 5 comments

System Information
Operating system: Windows 10 Pro
Graphics card: GeForce GTX 1080 Ti

Blender Version
Broken: 2.80, 2a79e34631, 2019-04-08 21:54

Short description of error

  • Viewport theme is not the same in all outliner windows.
  • Please use the same theme everywhere.
  • Selected objects aren't displayed the same way in multiple outliners.

Exact steps for others to reproduce the error
See my screenshot for further infos, please.

2019-04-10 08_14_40-Window.jpg

**System Information** Operating system: Windows 10 Pro Graphics card: GeForce GTX 1080 Ti **Blender Version** Broken: 2.80, 2a79e3463130, 2019-04-08 21:54 **Short description of error** - Viewport theme is not the same in all outliner windows. - Please use the same theme everywhere. - Selected objects aren't displayed the same way in multiple outliners. **Exact steps for others to reproduce the error** See my screenshot for further infos, please. ![2019-04-10 08_14_40-Window.jpg](https://archive.blender.org/developer/F6926605/2019-04-10_08_14_40-Window.jpg)

Added subscriber: @ChristophWerner

Added subscriber: @ChristophWerner
Member

Added subscriber: @Harley

Added subscriber: @Harley
Member

It's not a theme issue, but a problem in how objects are evaluated to whether they are selected or active.

A patch is now here:
https:*developer.blender.org/D4668

It's not a theme issue, but a problem in how objects are evaluated to whether they are selected or active. A patch is now here: [https:*developer.blender.org/D4668](https:*developer.blender.org/D4668)
Harley Acheson was assigned by Sebastian Parborg 2019-04-11 10:56:04 +02:00

This issue was referenced by c642474704

This issue was referenced by c642474704db6a33120da2e8cfa34d502046cf98

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#63451
No description provided.