Fix T63451: selected objects not highlighted in outliner scene view.

Differential Revision: https://developer.blender.org/D4668